done adding button

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>My first ever website!</h1>
     <h3>Look mama!! I can push github</h3>
+    <p> I am a Ghost</p>
+    <input type="text">
+    <br>
+    <button>click me babby!!</button>
 </body>
 </html>
