--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <h1 id="h1content" class="effect">My first ever website!</h1>
     <h3>Look mama!! I can push github</h3>
     <p> I am a Ghost</p>
+    <p>Felling happy</p>
     <input type="text">
     
     <button>click me babby!!</button>
